2002-05-11  Jon K Hellan  <hellan@acm.org>

	* src/workbook-control-component.c (wbcc_set_transient_for):
	Enable bonobo_control_set_transient_for. It's fixed in libbonoboui
	now.

2002-05-11  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/gnumeric-gconf.c (gnm_gconf_rm_notification_autocorrect) : 
	  renamed to gnm_gconf_rm_notification
	(nm_gconf_add_notification_plugin_directories) : new
	* src/gnumeric-gconf.h : ditto 	
	* src/gui-util.c (fsel_dir_handle_ok) : new
	(gnumeric_dialog_dir_selection) : new
	* src/gui-util.h (gnumeric_dialog_dir_selection) : new

2002-05-10  Jon K Hellan  <hellan@acm.org>

	* src/workbook-control-gui.c (cb_file_preferences): Add wbcg
	argument to dialog_preferences.
	(cb_format_preferences): Ditto.
	
2002-05-10  Morten Welinder  <terra@diku.dk>

	* src/value.c (value_new_string_nocopy): New function.
	(value_new_string): Simplify.

2002-05-10  Jon K Hellan  <hellan@acm.org>

	* src/workbook-control-gui.c (workbook_setup_sheets): Really
	revert kluge.

2002-05-10  Jon K Hellan  <hellan@acm.org>

	* src/gnumeric-canvas.c: oops. Committed this file by mistake, and
	have to revert.

2002-05-10  Jon K Hellan  <hellan@acm.org>

	* src/workbook-control-gui.c (workbook_setup_sheets): Remove
	resize kluge. It broke things on Solaris.

2002-05-09  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* schemas/gnumeric-general.schemas : add 3 printer schemax
	* src/gnumeric-gconf-priv.h : add printer keys
	* src/gnumeric-gconf.c : add printer get/set methods
	* src/gnumeric-gconf.h : ditto
	* src/print.c (print_job_info_set_one_time_defaults) : new
	(print_job_info_save_one_time_defaults) : new
	(print_job_info_get) : call print_job_info_set_one_time_defaults
	(sheet_print) : call print_job_info_save_one_time_defaults

2002-05-08  Jon K Hellan  <hellan@acm.org>

	* src/gui-util.c (gnumeric_dialog_run): Silence warnings.

2002-05-08  Jon K Hellan  <hellan@acm.org>

	* src/workbook-control-gui.c, src/workbook-control-gui-priv.h