@@ -19,6 +19,7 @@ Andreas:
 	  http://bugzilla.gnome.org/show_bug.cgi?id=80126
 	* Add GUI to plugin manager to add/remove extra plugin
 	  directories
+	* Add discard all/save all buttons to exit dialog.
 
 Jody:
 	http://bugzilla.gnome.org/show_bug.cgi?id=79925
